# mangayomi-server

./: .env.dist  .gitignore  Cargo.toml  Dockerfile  Dockerfile.arm64  LICENSE  README.md  deploy_docker.sh  deployment.yaml  docker-compose-arm64.yml  docker-compose.yml  server_list.json  tables.sql  tables_sqlite.sql
.github/: renovate.json5
.github/workflows/: build.yml  package.yaml
resources/assets/: style.css
resources/templates/: base.html  register.html
src/: db.rs  globals.rs  main.rs
src/entity/: accounts.rs  backups.rs  categ_manga.rs  categories.rs  chapters.rs  histories.rs  item_types.rs  manga.rs  mod.rs  prelude.rs  roles.rs  sources.rs  status.rs  track_status.rs  tracks.rs  updates.rs
src/sync/: mod.rs
src/sync/category/: controller.rs  model.rs  service.rs
src/sync/history/: controller.rs  mod.rs  model.rs  service.rs
src/sync/manga/: controller.rs  model.rs  service.rs
src/sync/update/: controller.rs  model.rs  service.rs
src/user/: controller.rs  mod.rs  model.rs  service.rs
