[package]
name = "mangayomi-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
sea-orm = { version = "1.1.0", features = [
    "sqlx-sqlite",
    "sqlx-mysql",
    "debug-print",
    "runtime-async-std-native-tls",
    "macros",
] }
dotenvy = "0.15"
log = "0.4.27"
openssl = { version = "0.10", features = ["vendored"] }
