[package]
name = "mangayomi-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
sea-orm = { version = "1.1.0", features = [
    "sqlx-sqlite",
    "sqlx-mysql",
    "debug-print",
    "runtime-async-std-native-tls",
    "macros",
    "with-json",
    "with-uuid",
] }
dotenvy = "0.15"
log = "0.4.27"
openssl = { version = "0.10", features = ["vendored"] }
actix-files = "0.6.6"
actix-http = "3.10.0"
actix-rt = "2.10.0"
actix-service = "2.0.3"
lazy_static = "1.5.0"
regex = "1.11.1"
rust-argon2 = "2.1.0"
tera = "1.20.0"
unicode-normalization = "0.1.24"
url = "2.5.4"
totp-rs = { version = "5.7.0", features = ["qr"] }
serde = "1.0.219"
tokio = "1.45.0"
