[package]
name = "mangayomi-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
dotenvy = "0.15"
log = "0.4.27"
openssl = { version = "0.10", features = ["vendored"] }
actix-files = "0.6.6"
actix-http = "3.10.0"
actix-rt = "2.10.0"
actix-service = "2.0.3"
lazy_static = "1.5.0"
regex = "1.11.1"
tera = "1.20.0"
unicode-normalization = "0.1.24"
url = "2.5.4"
totp-rs = { version = "5.7.0", features = ["qr"] }
serde = "1.0.219"
tokio = "1.45.0"
actix-session = { version = "0.10.1", features = ["cookie-session", "redis-session-native-tls"] }
env_logger = "0.11.8"
argon2 = "0.5.3"
secrecy = "0.10.3"
actix-identity = "0.8.0"
password-hash = "0.5.0"
mongodb = "3.2.3"
